# SENTINELA-

./: .gitignore  Cargo.toml  README.md  README_EN.md
src/: cli.rs  main.rs  menu.rs
src/modules/: mod.rs
src/modules/crypto/: mod.rs
src/modules/hash/: mod.rs
src/modules/logs/: mod.rs
src/modules/network/: mod.rs
src/modules/password/: mod.rs
src/modules/vuln/: mod.rs
