[package]
name = "sentinela"
version = "0.1.0"
edition = "2021"
description = "Suite de segurança para SOC - Network Recon, Log Analyzer, Password Tools, Hash Cracker, Crypto Lab"

[[bin]]
name = "sentinela"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal / UI
colored = "2"
indicatif = "0.17"
comfy-table = "7"
dialoguer = "0.11"
console = "0.15"

# Networking - DNS
hickory-resolver = "0.25"

# Hash / Criptografia
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
aes = "0.8"
cipher = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"

# Geração de senhas / aleatório
rand = "0.8"

# Regex / parsing de logs
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Misc
anyhow = "1"
thiserror = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
